fixed alignment

--- a/td-ui/src/app/app.component.css
+++ b/td-ui/src/app/app.component.css
@@ -3,7 +3,7 @@
 }
 
 app-side-bar {
-    flex-basis: 35%;
+    flex-basis: 20%;
 }
 
 curr-list {
