--- a/td-ui/src/app/curr-list/curr-list.component.css
+++ b/td-ui/src/app/curr-list/curr-list.component.css
@@ -1,10 +1,10 @@
 li {
     display: flex;
     flex-direction: row;
-    align-items: center;
     gap: 10px;
     padding: 10px;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid #808080;
+    width: 100%;
 }
 
 img {
@@ -32,4 +32,50 @@ p {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+#flexContainerCurrList {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+.taskAlign {
+    display: flex;
+    flex-direction: row;
+    max-width: 100px; /* Prevents it from shrinking too much */
+    justify-content: center; /* Centers content inside */
+    align-self: stretch; /* Centers the whole element */
+    margin-left: 5%;
+}
+
+#add {
+    width: 100%;
+    background: none;
+    border: none;
+    border: none;
+    cursor: pointer;
+}
+
+#taskBar {
+    min-height: 100px;
+    max-width: 80%;
+    height: 20%;
+    border: 1px solid gray;
+
+}
+
+.bar {
+    background: none;
+    width: 50%;
+    margin-left: 4%;
+
+}
+
+#title {
+    width: 85%;
+}
+
+#desc {
+    width: 85%;
+    min-height: 40px;
 }
